--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 
 .player h2 {
     padding-bottom: 10px;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     font-size: 38px;
     color: black;
     font-family: 'Julee', cursive;
@@ -107,7 +107,7 @@ body {
 
 .slidecontainer {
     display: flex;
-    width: 100%;
+    width: 75%;
     justify-content: center;
     align-items: center;
 }
@@ -131,12 +131,110 @@ body {
     opacity: 1;
 }
 
+input[type=range] {
+    height: 10px;
+    -webkit-appearance: none;
+    background: transparent;
+    width: 100%;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #000000;
+    background: #000000;
+    border-radius: 1px;
+    border: 0px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #000031;
+    border: 1px solid #00001E;
+    height: 10px;
+    width: 10px;
+    border-radius: 15px;
+    background: #000000;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -4px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #000000;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 1px 1px 1px #000000;
+    background: #000000;
+    border-radius: 1px;
+    border: 0px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #000031;
+    border: 1px solid #00001E;
+    height: 10px;
+    width: 10px;
+    border-radius: 15px;
+    background: #000000;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 2px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #000000;
+    border: 0px solid #010101;
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px #000000;
+}
+input[type=range]::-ms-fill-upper {
+    background: #000000;
+    border: 0px solid #010101;
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px #000000;
+}
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 1px 1px 1px #000031;
+    border: 1px solid #00001E;
+    height: 10px;
+    width: 10px;
+    border-radius: 15px;
+    background: #000000;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #000000;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #000000;
+}
+
+
+#timer {
+    margin-top: 10px;
+    font-family: Julee, cursive;
+    font-size: 20px;
+}
+
 .controls {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .controls > button {
@@ -232,6 +330,10 @@ body {
 
     .music-player {
         flex-direction: column;
+    }
+
+    .slidecontainer {
+        margin-bottom: 20px;
     }
 
     .player {
