--- a/style.css
+++ b/style.css
@@ -108,8 +108,15 @@ body {
 .slidecontainer {
     display: flex;
     width: 75%;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
     justify-content: center;
     align-items: center;
+}
+
+.slidecontainer:hover {
+    opacity: 1;
 }
 
 .slidecontainer i {
@@ -122,12 +129,9 @@ body {
     height: 10px;
     outline: none;
     border-radius: 10px;
-    opacity: 0.7;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
 }
 
-.slider:hover {
+.slidecontainer:hover {
     opacity: 1;
 }
 
@@ -145,11 +149,11 @@ input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 2px;
     cursor: pointer;
-    animate: 0.2s;
+    animation-duration: 0.2s;
     box-shadow: 1px 1px 1px #000000;
     background: #000000;
     border-radius: 1px;
-    border: 0px solid #010101;
+    border: 0 solid #010101;
 }
 input[type=range]::-webkit-slider-thumb {
     box-shadow: 1px 1px 1px #000031;
@@ -169,11 +173,11 @@ input[type=range]::-moz-range-track {
     width: 100%;
     height: 2px;
     cursor: pointer;
-    animate: 0.2s;
+    animation-duration: 0.2s;
     box-shadow: 1px 1px 1px #000000;
     background: #000000;
     border-radius: 1px;
-    border: 0px solid #010101;
+    border: 0 solid #010101;
 }
 input[type=range]::-moz-range-thumb {
     box-shadow: 1px 1px 1px #000031;
@@ -188,20 +192,20 @@ input[type=range]::-ms-track {
     width: 100%;
     height: 2px;
     cursor: pointer;
-    animate: 0.2s;
+    animation-duration: 0.2s;
     background: transparent;
     border-color: transparent;
     color: transparent;
 }
 input[type=range]::-ms-fill-lower {
     background: #000000;
-    border: 0px solid #010101;
+    border: 0 solid #010101;
     border-radius: 2px;
     box-shadow: 1px 1px 1px #000000;
 }
 input[type=range]::-ms-fill-upper {
     background: #000000;
-    border: 0px solid #010101;
+    border: 0 solid #010101;
     border-radius: 2px;
     box-shadow: 1px 1px 1px #000000;
 }
